list clicking now works but produces a console error

--- a/src/style.css
+++ b/src/style.css
@@ -38,6 +38,10 @@
  #hide-listings, #show-listings {
      width: 48%;
 }
+
+.foursquareerror2{
+  display:none;
+}
 /* ******************************************* */
 /* Barb's custom CSS */
 /* ******************************************* */
