fixing service worker and console error. also adding timeout for bounce

--- a/src/style.css
+++ b/src/style.css
@@ -42,6 +42,13 @@
 .foursquareerror2{
   display:none;
 }
+
+#errors{
+  color:red;
+  background-color:lightgray;
+  border-radius:15px;
+  text-align:center;
+}
 /* ******************************************* */
 /* Barb's custom CSS */
 /* ******************************************* */
